--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-	<p>By <a href="http://taniarascia.com">Tania</p>
+	<p>&copy; 2018 <a href="http://taniarascia.com">Tania Rascia</p>
 </footer>
